# WebX

./: .gitignore  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md
.github/workflows/: build-release.yml  ci.yml  security.yml
assets/: README.md
benchmarks/: README.md
docs/: README.md  github-actions.md
scripts/: README.md  calculate-version.ps1  calculate-version.sh
src/: browser.rs  lib.rs  main.rs  webview.rs
src/config/: mod.rs
src/core/: mod.rs
src/features/: ad_blocker.rs  dark_mode.rs  download_manager.rs  find_in_page.rs  keyboard_shortcuts.rs  mod.rs  password_manager.rs  pdf_viewer.rs  print_manager.rs  privacy_protection.rs  proxy_manager.rs  reading_mode.rs  session_restore.rs  spell_checker.rs  tab_manager.rs  user_agent_switcher.rs
src/features/bookmark_manager/: mod.rs
src/features/caching/: http_cache.rs  lru_cache.rs  mod.rs  offline_storage.rs
src/features/certificate_manager/: mod.rs
src/features/downloads/: manager.rs  mod.rs  progress.rs  storage.rs
src/features/extension_system/: mod.rs
src/features/history_manager/: mod.rs
src/features/productivity/: mod.rs
src/features/resource_optimizer/: bandwidth_monitor.rs  css_minifier.rs  image_optimizer.rs  javascript_minifier.rs  mod.rs
src/features/sandbox/: mod.rs
src/features/security/: mod.rs
src/features/smart_address_bar/: mod.rs
src/features/system/: mod.rs
src/features/tabs/: events.rs  manager.rs  mod.rs  ui.rs
src/features/ui/: mod.rs
src/features/web_inspector/: mod.rs
src/ui/: menu.rs  mod.rs  window.rs
src/utils/: mod.rs
tests/: README.md
(+21 files in other folders)
