[package]
name = "webx"
version = "0.1.0"
edition = "2021"
authors = ["Ledokoz Team"]
description = "WebX Browser - Official system browser for Ledokoz OS"
license = "GPL-3.0"
repository = "https://github.com/ledokoz-tech/WebX"

[dependencies]
# WebView and windowing
wry = "0.43"
tao = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for downloads
reqwest = { version = "0.12", features = ["json", "stream"] }

# File system and paths
directories = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Clipboard support
arboard = "3.4"

# Encryption for password manager
ring = "0.17"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"

# Database for storing passwords and settings
sled = "0.34"

# Regex for ad blocker
regex = "1.10"

# Async channel for communication
tokio-stream = "0.1"

# Compression for data storage
flate2 = "1.0"

# MD5 hashing for cache keys
md5 = "0.7"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Directories for platform-specific paths
dirs = "5.0"

[[bin]]
name = "webx"
path = "src/main.rs"
